# RER-delays-analysis

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/sample/weather/: 2025-11-15 weather.csv  2025-11-15_weather.csv
requirements/: analysis.txt  base.txt
scripts/: build_stations.py  build_stop_index.py  enrich_sample_raw.py  fixed_effects.py  hourly_panel.py  poll_rer.py  smoke_test.py  weather_fetch_daily.py
src/idf_rer/: config.py  enrich.py  gtfs_stop_index.py  polling_pipeline.py  prim_client.py  siri_flatten.py  station_catalog.py
src/idf_rer_delays.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/weather/: build_daily_weather.py  build_hourly_panel.py  merge_weather_delays.py  open_meteo.py
